Added pytest and nbmake for nb testing

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -2,3 +2,5 @@ jupyter-book
 jupytext
 -r requirements.txt
 notebooks-helpers @ git+https://github.com/ccoulombe/notebooks-helpers.git
+pytest
+nbmake
